# Codex_Ultura

./: .gitignore  CHANGELOG.md  NOTICE.md  PUBLISHING.md  README.md  index.html  package-lock.json  package.json
docs/: THEME_STUDIO.md  THIRD_PARTY_NOTICES.md  USER_MANUAL.md
docs/superpowers/plans/: 2026-07-23-key-model-cost-failover-routing.md
docs/theme-package-example/: README.md  theme.json
scripts/: build-public.mjs
server/: build-web.mjs  index.mjs  package-lock.json  package.json  relay-core.mjs  relay.test.mjs
server/web/: app.js  index.html  message-format.js  relay-pairing-crypto.js  styles.css
src/: App.css  App.tsx  RootSurface.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/codex-plus/apps/codex-plus-launcher/src/: main.rs
src-tauri/codex-plus/assets/inject/: renderer-inject.js
src-tauri/codex-plus/assets/theme-studio/: ASSET-SOURCES.txt
src-tauri/codex-plus/assets/theme-studio/concepts/: mint-paper.css  mint-paper.json  red-future-city.css  red-future-city.json
src-tauri/codex-plus/crates/codex-plus-core/: Cargo.toml
src-tauri/codex-plus/crates/codex-plus-core/examples/: theme_runtime_bundle.rs
src-tauri/codex-plus/crates/codex-plus-core/src/: app_paths.rs  ccs_import.rs  cdp.rs  codex_app_state.rs  diagnostic_log.rs  hot_switch_mapping.rs  http_client.rs  launcher.rs  lib.rs  model_catalog.rs  model_health.rs  model_suffix.rs  native_menu.rs  protocol_proxy.rs  provider_import.rs  relay_config.rs  relay_switch.rs  routes.rs  script_market.rs  settings.rs  theme_market.rs  theme_studio.rs  user_scripts.rs  vision.rs  vlm_secrets.rs  watcher.rs  windows_integration.rs
src-tauri/codex-plus/crates/codex-plus-core/tests/: bridge_routes.rs  cdp_bridge.rs  launcher.rs  model_catalog.rs  model_health.rs  protocol_proxy.rs  relay_config.rs  theme_studio.rs  watcher.rs
src-tauri/src/: app_preferences.rs  codex_commands.rs  codex_floating.rs  codex_install.rs  lib.rs  main.rs  proxy_latency.rs
src-tauri/src/remote_control/: manager.rs  mod.rs  monitor.rs  relay_client.rs  relay_pairing.rs
src/components/: AppErrorBoundary.tsx
src/features/codex/: CodexWorkspace.css  CodexWorkspace.tsx  FloatingSurface.css  FloatingSurface.tsx  types.ts
src/features/codex/context/: ContextEntryEditor.tsx  PluginMarketplacePanel.tsx  ToolsPluginsPage.tsx  contextTypes.ts
src/features/codex/hotSwitch/: HotSwitchPage.css  HotSwitchPage.tsx  ModelMappingEditor.tsx  mappingValidation.ts
src/features/codex/themes/: types.ts  (+3 more)
src/features/remote-control/: RelayPairingPanel.tsx  RemoteControl.css  RemoteControlPage.tsx  RemoteLiveMonitor.tsx  api.ts  types.ts
src/lib/: duration.ts  i18n.tsx  relayApi.ts
tests/: codex-ui-logic.test.mjs  relay-deployment-scripts.test.mjs  relay-pairing-web-e2e.mjs  remote-live-interaction.mjs  remote-web-e2e.mjs  theme-runtime-shell-e2e.mjs  theme-studio-web-e2e.mjs
tests/theme-concepts/: mint-paper.test.mjs  red-future-city.test.mjs
(+5 files in other folders)
